Revert "Merge branch 'main' of https://github.com/kengboonang/WADBrothers.github.io"
This reverts commit 2df8174eb848095f8a9e125002f87c8aed92f384, reversing
changes made to 3d4556a69dac5258da51d9303ae713bdd53c6e88.

--- a/templates/pages/signup_login pages/signup_page.html
+++ b/templates/pages/signup_login pages/signup_page.html
@@ -94,7 +94,7 @@
                 <br>
                 <!-- Submit button -->
                 <div class="d-grid">
-                    <button type="button" @click="sign_up()" class="btn btn-primary mb-4">Sign Up</button>
+                    <button @click="sign_up()" class="btn btn-primary mb-4">Sign Up</button>
                 </div>
 
                 <!-- fb/google buttons can delete if dw-->
