--- a/templates/pages/signup_login pages/login_page.html
+++ b/templates/pages/signup_login pages/login_page.html
@@ -61,7 +61,7 @@
 					</div>
                     <br>
                     <div class="d-grid">
-                        <button type="button" @click="login()" class="btn btn-primary mb-4">Login</button>
+                        <button @click="login()" class="btn btn-primary mb-4">Login</button>
                     </div>
 					
 				</form>
