--- a/templates/create_activities/create_activities.html
+++ b/templates/create_activities/create_activities.html
@@ -16,152 +16,173 @@
     </head>
 
     <body>
-        <div class="container text-dark">
-            <h3 class="heading">Create an Activity</h3>
-            <form>
-                <!-- PLACE  -->
-                <div class="row">
-                    <div class="col-7">
-                        <div class="form-floating mb-3">
-                            <input type="text" class="form-control" id="input_place" placeholder="Add a Place">
-                            <label for="input_place">Add a Place</label>
-                        </div>
-                    </div>
-                <!-- TAG -->
-                    <div class="col-5">
+        <div class="container-fluid">
+            <div class="row sidebar-parent flex-nowrap">
+                <div id="nav" class="col-2 sidebar-css">
+                     <!-- SIDEBAR  -->
+                    <sidebar-phase2></sidebar-phase2>
+                </div>
+    
+                <!-- rest of site -->
+                <div class="col p-4">
+                    <div class="row">
+                        <div class="col">
+                            <h3 class="heading">Create an Activity</h3>
+                            <form>
+                                <!-- PLACE  -->
+                                <div class="row">
+                                    <div class="col-7">
+                                        <div class="form-floating mb-3">
+                                            <input type="text" class="form-control" id="input_place" placeholder="Add a Place">
+                                            <label for="input_place">Add a Place</label>
+                                        </div>
+                                    </div>
+                                <!-- TAG -->
+                                    <div class="col-5">
 
-                        <!-- vue for tag -->
-                        <div id="main2" class="mb-3">
-                            <div class="input-group">
-                                <span class="input-group-text">#</span>
-                                <div class="form-floating">
-                                    <input type="text" class="form-control" id="input_tag" placeholder="Add a Tag" list="list_all_tags" v-model="tag_input">
-                                    <label for="input">Add a Tag</label>
+                                        <!-- vue for tag -->
+                                        <div id="main2" class="mb-3">
+                                            <div class="input-group">
+                                                <span class="input-group-text">#</span>
+                                                <div class="form-floating">
+                                                    <input type="text" class="form-control" id="input_tag" placeholder="Add a Tag" list="list_all_tags" v-model="tag_input">
+                                                    <label for="input">Add a Tag</label>
+                                                </div>
+                                            </div> 
+
+                                            <!-- LIST OF CURRENT TAGS -->
+                                            <datalist id="list_all_tags">
+                                                <option v-for="tag of tags" :value="tag"></option>
+
+                                            </datalist>
+
+                                        
+                                        </div>
+                                    </div>
                                 </div>
-                            </div> 
+                                <!-- DESCRIPTION -->
+                                <div class="form-floating mb-3">
+                                    <textarea class="form-control" placeholder="Add a Description" id="input_description" style="height: 100px"></textarea>
+                                    <label for="input_description">Add a Description</label>
+                                </div>
 
-                            <!-- LIST OF CURRENT TAGS -->
-                            <datalist id="list_all_tags">
-                                <option v-for="tag of tags" :value="tag"></option>
+                                <!-- Currency converter -->
+                                <div id="main">
+                                        <!--  ENTER COST   -->
+                                    <div class="row">
+                                        <div class="col-5">
+                                        <div class="row g-0">
+                                            <div class="col-8">
+                                                <div class="form-floating mb-3">
+                                                    <input type="text" class="form-control" id="input_place" placeholder="Add a Place" v-model="amount" v-on:change="calculate_to_from()">
+                                                    <label for="input_place">Enter the Cost/person</label>
+                                                </div>
+                                            </div>    
 
-                            </datalist>
+
+                                            <!-- DEFAULT FROM SGD -->
+                                            <div class="col-4">
+                                                <div class="drop-list form-floating">
+                                                    <div class="from">
+                                                    <!-- <p>From</p> -->
+                                                        <div class="select-box">
+                                                            <!-- <img src="https://flagcdn.com/48x36/sg.png" alt="flag"> -->
+                                                            <select class="form-select" id="floatingSelect" v-model="from" v-on:change="calculate_to_from()" style="height:57px"> <!-- Options tag are inserted from JavaScript --> </select>
+                                                            <!-- <label for="floatingSelect">From</label> -->
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+
+                                        </div>
+                                    </div>
+
+                                    <!-- CONVERTER ICON -->
+                                    <div class="col-2">
+                                        <div class="icon"><i class="fas fa-exchange-alt"></i></div>
+                                    </div>
+
+                                        <!-- AUTOFILLED BY API -->
+                                    <div class="col-5">
+                                        <div class="row g-0">
+                                            <div class="col-8">
+                                                <div class="form-floating mb-3">
+                                                    <input type="text" class="form-control" id="input_place" placeholder="Add a Place" v-model="converted_amount" @change="calculate_from_to()">
+                                                    <label for="input_place">Enter the Cost/person</label>
+                                                </div>   
+                                            </div> 
+                                                <!-- DEFAULT TO KRW -->
+                                            <div class="col-4">
+                                                <div class="drop-list form-floating">
+                                                    <div class="to">
+                                                        <!-- <p>To</p> -->
+                                                        <div class="select-box">
+                                                            <!-- <img src="https://flagcdn.com/48x36/kr.png" alt="flag"> -->
+                                                        <select class="form-select" id="floatingSelect" v-model="to" @change="calculate_to_from()" style="height:57px"> <!-- Options tag are inserted from JavaScript --> </select>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+
+
+                                </div>
+                                </div>
+
+                                <!-- ATTACHMENTS  -->
+                                <div class="form-floating mb-5">
+                                    <div class="input-group mb-3" style="width: 50%;">
+                                        <label class="input-group-text" for="inputGroupFile01">Add Attachment</label>
+                                        <input type="file" class="form-control" id="inputGroupFile01">
+                                    </div>
+
+                                <!-- BACK & CREATE ACTIVITY BUTTON  -->
+                                <div class="buttons">
+                                    <button type="button" class="btn back_button btn-main-bold-fixed" data-bs-toggle="modal" data-bs-target="#back_button_modal">Back</button>
+                                    <button class="btn create_button btn-main-fixed">Create</button>
+                                    
+                                    
+                
+                                    <!-- Back Button Modal -->
+                                    <div class="modal fade" id="back_button_modal" tabindex="-1" aria-labelledby="back_button_modal_label1" aria-hidden="true">
+                                        <div class="modal-dialog">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                            <h1 class="modal-title fs-5" id="ModalLabel">Confirm Navigation</h1>
+                                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                            </div>
+                                            <div class="modal-body">
+                                            Are you sure you want to leave this page? Any unsaved changes will be lost. 
+                                            </div>
+                                            <div class="modal-footer">
+                                            <button type="button" class="btn btn-main-bold-fixed" data-bs-dismiss="modal">Close</button>
+                                            <button type="button" class="btn btn-main-fixed">Confirm</button>
+                                            </div>
+                                        </div>
+                                        </div>
+                                    </div>
+
+
+                                </div>
+
+                            </form>
+                        </div>
+
+                        <!-- ADD MAP DIV UNDER A COL HERE -->
 
                         
-                        </div>
+
+
                     </div>
                 </div>
-                <!-- DESCRIPTION -->
-                <div class="form-floating mb-3">
-                    <textarea class="form-control" placeholder="Add a Description" id="input_description" style="height: 100px"></textarea>
-                    <label for="input_description">Add a Description</label>
-                </div>
-
-                <!-- Currency converter -->
-                <div id="main">
-                        <!--  ENTER COST   -->
-                    <div class="row">
-                        <div class="col-5">
-                        <div class="row g-0">
-                            <div class="col-8">
-                                <div class="form-floating mb-3">
-                                    <input type="text" class="form-control" id="input_place" placeholder="Add a Place" v-model="amount" v-on:change="calculate_to_from()">
-                                    <label for="input_place">Enter the Cost/person</label>
-                                </div>
-                            </div>    
-
-
-                            <!-- DEFAULT FROM SGD -->
-                            <div class="col-4">
-                                <div class="drop-list form-floating">
-                                    <div class="from">
-                                    <!-- <p>From</p> -->
-                                        <div class="select-box">
-                                            <!-- <img src="https://flagcdn.com/48x36/sg.png" alt="flag"> -->
-                                            <select class="form-select" id="floatingSelect" v-model="from" v-on:change="calculate_to_from()" style="height:57px"> <!-- Options tag are inserted from JavaScript --> </select>
-                                            <!-- <label for="floatingSelect">From</label> -->
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-
-                        </div>
-                    </div>
-
-                    <!-- CONVERTER ICON -->
-                    <div class="col-2">
-                        <div class="icon"><i class="fas fa-exchange-alt"></i></div>
-                    </div>
-
-                        <!-- AUTOFILLED BY API -->
-                    <div class="col-5">
-                        <div class="row g-0">
-                            <div class="col-8">
-                                <div class="form-floating mb-3">
-                                    <input type="text" class="form-control" id="input_place" placeholder="Add a Place" v-model="converted_amount" @change="calculate_from_to()">
-                                    <label for="input_place">Enter the Cost/person</label>
-                                </div>   
-                            </div> 
-                                <!-- DEFAULT TO KRW -->
-                            <div class="col-4">
-                                <div class="drop-list form-floating">
-                                    <div class="to">
-                                        <!-- <p>To</p> -->
-                                        <div class="select-box">
-                                            <!-- <img src="https://flagcdn.com/48x36/kr.png" alt="flag"> -->
-                                        <select class="form-select" id="floatingSelect" v-model="to" @change="calculate_to_from()" style="height:57px"> <!-- Options tag are inserted from JavaScript --> </select>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-
-                </div>
-                </div>
-
-                <!-- ATTACHMENTS  -->
-                <div class="form-floating mb-5">
-                    <div class="input-group mb-3" style="width: 50%;">
-                        <label class="input-group-text" for="inputGroupFile01">Add Attachment</label>
-                        <input type="file" class="form-control" id="inputGroupFile01">
-                    </div>
-
-                <!-- BACK & CREATE ACTIVITY BUTTON  -->
-                <div class="buttons">
-                    <button type="button" class="btn back_button btn-main-bold-fixed" data-bs-toggle="modal" data-bs-target="#back_button_modal">Back</button>
-                    <button class="btn create_button btn-main-fixed">Create</button>
-                    
-                    
-  
-                    <!-- Back Button Modal -->
-                    <div class="modal fade" id="back_button_modal" tabindex="-1" aria-labelledby="back_button_modal_label1" aria-hidden="true">
-                        <div class="modal-dialog">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                            <h1 class="modal-title fs-5" id="ModalLabel">Confirm Navigation</h1>
-                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                            </div>
-                            <div class="modal-body">
-                            Are you sure you want to leave this page? Any unsaved changes will be lost. 
-                            </div>
-                            <div class="modal-footer">
-                            <button type="button" class="btn btn-main-bold-fixed" data-bs-dismiss="modal">Close</button>
-                            <button type="button" class="btn btn-main-fixed">Confirm</button>
-                            </div>
-                        </div>
-                        </div>
-                    </div>
-
-
-                </div>
-
-            </form>
-
+            </div>
         </div>
         <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
         <script src="main.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
         
+        <!-- sidebar js -->
+    <script src="../pages/sidebars.js"></script>
     </body>
 </html>
