--- a/templates/pages/sidebar-phase3.html
+++ b/templates/pages/sidebar-phase3.html
@@ -14,37 +14,41 @@
     <title>WAD Travels Project</title>
 </head>
 <body>
-    <div id="nav">
-        <div class="container-fluid">
-            <div class="row flex-nowrap">
-
-                <!-- sidebar -->
+    <div class="container-fluid">
+        <div class="row sidebar-parent flex-nowrap">
+            <div id="nav" class="col-2 sidebar-css">
+                 <!-- SIDEBAR  -->
                 <sidebar-phase3></sidebar-phase3>
+            </div>
 
-                <!-- content-->
+            <!-- rest of site -->
+            <div class="col p-4">
+                <div class="row">
+                    <div class="col py-3">
+                        <h3>Phase 3 sidebar for KB</h3>
+                        <p class="lead">
+                            Content content content
+                        </p>
 
-        <div class="col py-3">
-            <h3>Phase 3 sidebar for KB</h3>
-            <p class="lead">
-                Content content content
-            </p>
+                        <ul class="list-unstyled">
+                            <li><h5>Hola amigos</h5> walaala</li>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo, vitae rem, deserunt veniam quibusdam dolore ad beatae dignissimos dolores nesciunt quia minus velit animi. At tempore omnis eaque aliquam unde?
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore explicabo quam error! Ad iusto quae eos hic quam facilis dolorem nemo cumque ea, odit fugiat, assumenda culpa natus similique praesentium?
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi fugiat blanditiis alias assumenda soluta perferendis dolores nam provident nesciunt temporibus et quo, commodi, placeat adipisci, impedit excepturi! Nemo, id reprehenderit.
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil exercitationem doloremque pariatur. Amet tempore cum unde consectetur ipsa hic culpa animi fuga rem aliquam, minima quisquam vitae non eaque saepe!Lorem
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde corporis sint beatae aliquid magni quae nam ab accusantium doloribus illum sit accusamus, officia veniam officiis vero est optio itaque? Nemo!
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis rem doloribus illum illo mollitia earum placeat doloremque incidunt iste, voluptate similique, natus magnam dolorum ut. Dolore et incidunt reiciendis quia?
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum rem delectus, molestiae incidunt soluta vel quod ipsa error eius cupiditate doloremque accusantium expedita reiciendis fugiat pariatur quos placeat. Officiis, nesciunt!
+                        </ul>
+                    </div>
 
-            <ul class="list-unstyled">
-                <li><h5>Hola amigos</h5> walaala</li>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo, vitae rem, deserunt veniam quibusdam dolore ad beatae dignissimos dolores nesciunt quia minus velit animi. At tempore omnis eaque aliquam unde?
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore explicabo quam error! Ad iusto quae eos hic quam facilis dolorem nemo cumque ea, odit fugiat, assumenda culpa natus similique praesentium?
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi fugiat blanditiis alias assumenda soluta perferendis dolores nam provident nesciunt temporibus et quo, commodi, placeat adipisci, impedit excepturi! Nemo, id reprehenderit.
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil exercitationem doloremque pariatur. Amet tempore cum unde consectetur ipsa hic culpa animi fuga rem aliquam, minima quisquam vitae non eaque saepe!Lorem
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde corporis sint beatae aliquid magni quae nam ab accusantium doloribus illum sit accusamus, officia veniam officiis vero est optio itaque? Nemo!
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis rem doloribus illum illo mollitia earum placeat doloremque incidunt iste, voluptate similique, natus magnam dolorum ut. Dolore et incidunt reiciendis quia?
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum rem delectus, molestiae incidunt soluta vel quod ipsa error eius cupiditate doloremque accusantium expedita reiciendis fugiat pariatur quos placeat. Officiis, nesciunt!
-            </ul>
-        </div>
+                <div class="col">Some other content</div>
         
             <!-- Content end -->
 
 
 
+                </div>
             </div>
         </div>
     </div>
