--- a/templates/select_activities_page/select_activities_page.html
+++ b/templates/select_activities_page/select_activities_page.html
@@ -21,77 +21,82 @@
     <title>Select Activities Page</title>
 </head>
 <body>
-    <div id="nav">
     <div class="container-fluid">
-        <div class="row flex-nowrap">
-            <!-- sidebar -->
-            <sidebar-phase2></sidebar-phase2>
+        <div class="row sidebar-parent flex-nowrap">
+            <div id="nav" class="col-2 sidebar-css">
+                 <!-- SIDEBAR  -->
+                <sidebar-phase2></sidebar-phase2>
+            </div>
 
-            <!-- HEADER -->
-            <div class="col ps-5 pt-5 bg-mild">
-                <h1> Trip to Seoul, Korea </h1>
-                <h5 style="font-style:italic;"> 1 December 2022 - 10 December 2022</h5>
-                <p>Trip leader, please select the activities </p>
+            <!-- rest of site -->
+            <div class="col p-4">
+                <div class="row">
+                    <!-- HEADER -->
+                    <div class="col ps-5 pt-5 bg-mild">
+                        <h1> Trip to Seoul, Korea </h1>
+                        <h5 style="font-style:italic;"> 1 December 2022 - 10 December 2022</h5>
+                        <p>Trip leader, please select the activities </p>
 
-                <!-- Table  -->
-                <div class="content">
-                    <div class="container" id="main">
-                        <div class="table-responsive custom-table-responsive">
-                        <table class="table custom-table">
-                            <thead>
-                                <!-- TABLE HEADER -->
-                                <tr>  
-                                    <th scope="col">
-                                        <label class="">
-                                        <input type="checkbox" @change="select_all()"/>
-                                        <div class=""></div>
-                                        </label>
-                                    </th>
-                                    
-                                    <th scope="col">Activity</th>
-                                    <th scope="col" style="text-align: center;">#Tag</th>
-                                    <th scope="col" style="text-align: center;">Voted Yes</th>
-                                    <th scope="col" style="text-align: center;">Cost/person</th>
-                                </tr>
-                            </thead>
-                                <!-- TABLE BODY -->
-                            <tbody>
-                                <template v-for="location in locations">
-                                    <tr scope="row">
-                                        <th scope="row">
-                                        <input type="checkbox" name="atv" :value="location.price.sgd" v-model="total_price_list" @change="calculate_spending()" />
-                                        </th>
-                                        <td>
-                                            {{ location.name }}
-                                        </td>
-                                        <td style="text-align: center;"> 
-                                            {{ location.tag }}
-                                        </td>
-                                        <td style="text-align: center;">
-                                            {{ location.votes_percentage.yes}}%
-                                        </td>
-                                        <td style="text-align: center;">
-                                            ${{ location.price.sgd}}
-                                        </td>
-                                    </tr>
+                        <!-- Table  -->
+                        <div class="content">
+                            <div class="container" id="main">
+                                <div class="table-responsive custom-table-responsive">
+                                <table class="table custom-table">
+                                    <thead>
+                                        <!-- TABLE HEADER -->
+                                        <tr>  
+                                            <th scope="col">
+                                                <label class="">
+                                                <input type="checkbox" @change="select_all()"/>
+                                                <div class=""></div>
+                                                </label>
+                                            </th>
+                                            
+                                            <th scope="col">Activity</th>
+                                            <th scope="col" style="text-align: center;">#Tag</th>
+                                            <th scope="col" style="text-align: center;">Voted Yes</th>
+                                            <th scope="col" style="text-align: center;">Cost/person</th>
+                                        </tr>
+                                    </thead>
+                                        <!-- TABLE BODY -->
+                                    <tbody>
+                                        <template v-for="location in locations">
+                                            <tr scope="row">
+                                                <th scope="row">
+                                                <input type="checkbox" name="atv" :value="location.price.sgd" v-model="total_price_list" @change="calculate_spending()" />
+                                                </th>
+                                                <td>
+                                                    {{ location.name }}
+                                                </td>
+                                                <td style="text-align: center;"> 
+                                                    {{ location.tag }}
+                                                </td>
+                                                <td style="text-align: center;">
+                                                    {{ location.votes_percentage.yes}}%
+                                                </td>
+                                                <td style="text-align: center;">
+                                                    ${{ location.price.sgd}}
+                                                </td>
+                                            </tr>
 
-                                    <!-- SPACE -->
-                                    <tr class="spacer"><td colspan="100"></td></tr>
-                                </template>
+                                            <!-- SPACE -->
+                                            <tr class="spacer"><td colspan="100"></td></tr>
+                                        </template>
 
-                          </tbody>
-                        </table>
-                      </div>
+                                </tbody>
+                                </table>
+                            </div>
 
-                      <div>
-                        <h3>Total Spending: {{ spending }} SGD</h3>
-                      </div>
+                            <div>
+                                <h3>Total Spending: {{ spending }} SGD</h3>
+                            </div>
 
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
     </div>
 
 
