--- a/templates/pages/sidebar-general.html
+++ b/templates/pages/sidebar-general.html
@@ -14,27 +14,31 @@
     <title>WAD Travels Project</title>
 </head>
 <body>
-    <div id="nav">
-        <div class="container-fluid">
-            <div class="row flex-nowrap">
-            
-                <!-- sidebar -->
+    <div class="container-fluid">
+        <div class="row sidebar-parent flex-nowrap">
+            <div id="nav" class="col-2 sidebar-css">
+                 <!-- SIDEBAR  -->
                 <sidebar-general></sidebar-general>
-            
-              
-                <!-- Content -->
-            <div class="col py-3">
-                <h3>When choosing trips</h3>
-                <p class="lead">
-                    Content content content
-                </p>
-
-                <ul class="list-unstyled">
-                    <li><h5>Hola amigos</h5> walaala</li>
-                </ul>
             </div>
+
+            <!-- rest of site -->
+            <div class="col p-4">
+                <div class="row">
+                    <div class="col py-3">
+                        <h3>When choosing trips</h3>
+                        <p class="lead">
+                            Content content content
+                        </p>
+
+                        <ul class="list-unstyled">
+                            <li><h5>Hola amigos</h5> walaala</li>
+                        </ul>
+                    </div>
+
+                    <div class="col">some content</div>
                 <!-- Content end -->
 
+                </div>
             </div>
         </div>
     </div>
