--- a/templates/pages/signup_login pages/reset_password_page.html
+++ b/templates/pages/signup_login pages/reset_password_page.html
@@ -18,7 +18,7 @@
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     
 
-    <title>Login Page</title>
+    <title>Reset Passowrd Page</title>
 
     <style>
         body {
@@ -46,7 +46,7 @@
 	<div class="d-flex justify-content-center h-100">
 		<div class="card">
 			<div class="card-header text-primary">
-				<h3>Sign In</h3>
+				<h3>Reset Password</h3>
 			</div>
 			<div class="card-body">
 				<form>
@@ -55,13 +55,14 @@
                         <input type="email" class="form-control" v-model="email" name="email" placeholder="Email">
                     </div>
 					<br>
-					<div class="input-group form-group">
+					<!-- <div class="input-group form-group">
 						<span class="input-group-text"><i class="fas fa-key"></i></span>
 						<input type="password" class="form-control" v-model="password" name="password" placeholder="Password">
-					</div>
+					</div> -->
+                    An email with link
                     <br>
                     <div class="d-grid">
-                        <button type="button" @click="login()" class="btn btn-primary mb-4">Login</button>
+                        <button type="button" @click="login()" class="btn btn-primary mb-4">Send Reset Password Email</button>
                     </div>
 					
 				</form>
