--- a/templates/pages/signup_login pages/login_page.html
+++ b/templates/pages/signup_login pages/login_page.html
@@ -63,6 +63,13 @@
                     <div class="d-grid">
                         <button type="button" @click="login()" class="btn btn-primary mb-4">Login</button>
                     </div>
+                    <div>
+                        <p class="text-center text-muted">or</p>
+                        <div class="d-grid">
+                            <button type="button" @click="" class="btn btn-outline-info mb-2"><i class="fa-brands fa-google"></i> Continue with Google</button>
+                        </div>
+                        
+                    </div>
 					
 				</form>
 			</div>
