--- a/templates/pages/signup_login pages/reset_password_page.html
+++ b/templates/pages/signup_login pages/reset_password_page.html
@@ -18,7 +18,7 @@
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     
 
-    <title>Reset Passowrd Page</title>
+    <title>Reset Password Page</title>
 
     <style>
         body {
