flight page: pulls data from database now

--- a/templates/flight_page/flight_page.html
+++ b/templates/flight_page/flight_page.html
@@ -566,10 +566,11 @@
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
 
     <!-- local js import -->
-    <script src="flight_page.js"></script>
+    <script src="flight_page.js" type="module"></script>
 
     <!-- Refer to sidebar JS -->
     <script src="../pages/sidebars.js"></script>
+    
 </body>
 </body>
 </html>
